
## [Unreleased]

### Changed

- Melhorada a descrição do `/fazendinha entregas`. 

### Fixed

- Corrigido menção de usuário para iniciar uma partida de Poker.
- Corrigido plantas negativas aparecerem nos comandos da fazendinha. 
- Corrigido impedimento de realizar entregas, mesmo tendo o peso suficiente da planta.

## [6.3.0] - 2026-02-16

### Added

- Agora é possível instalar a Menhera em sua conta! Use comandos da Menhera em qualquer lugar, qualquer DM, qualquer grupo ou qualquer servidor!

## [6.2.6] - 2026-02-13

### Hotfix

- Corrigido resgatar daily de caças.

### Added

- Sequências de partidas de Blackjack! Agora é possível apostar mais de uma vez em um mesma execução do comando Blackjack. 

### Changed

- O comando `/daily` agora usa os novos componentes V2 do Discord.
- Alterado limite de itens exibidos na feira por página, de 8 para 15. 
- O comando `/blackjack` foi atualizado para os componentes V2 do Discord!
- Alterado geração de números do sorteio do jogo do bicho

## [6.2.5] - 2026-02-11

### Changed

- Atualizado `/fazendinha feira trocas` para diminuir a poluição visual.
- Mensagens importantes são destacadas no `/cooldowns` agora.

### Fixed

- Corrigido erros ao mostrar pedidos da feira quando haviam muitos pedidos.
- Corrigido erro para criar pedido de troca de qualidade precária.

## [6.2.4] - 2026-02-11

### Changed

- O bônus para finalizar uma daily que não foi trocada foi aumentado de 5000 para 10000 estrelinhas.

### Fixed

- Corrigido gifs do comando `/matar` quando mencionava bots.
- Corrigido notificação de bônus de daily falando que a recompensa foi 0 estrelinhas. 
- Corrigido erros no comando `/notificações` quando o usuário tinha muitas notificações.

## [6.2.3] - 2026-02-10

### Added

- Criado novo comando `/fazendinha composteira`, transforme plantas boas e podres em fertilizantes!

### Changed

- Alterado a disposição dos campos da fazendinha no `/cooldowns` para melhor leitura.