@@ -16,6 +16,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - Corrigido menção de usuário para iniciar uma partida de Poker.
 - Corrigido plantas negativas aparecerem nos comandos da fazendinha. 
 - Corrigido impedimento de realizar entregas, mesmo tendo o peso suficiente da planta.
+- Apenas o dono da interação pode fechar o BlackJack no botão "Cancelar".
 
 ## [6.3.0] - 2026-02-16
 
